--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div id="Head"><h2>Sangtraan</h2></div>
         <div id="Menu"><p class="p1">Menu</p>
             <a href="https://khangisme.github.io/home/">Home |</a>
+            <a href="https://khangisme.github.io/aboutMe/">About me</a>
             <a href="https://youtu.be/dQw4w9WgXcQ"> free money! |</a>
             <a href="https://khangisme.github.io/shop/"> shop |</a>
-            <a href="https://khangisme.github.io/sangtraan/"> Sangtraan |</a>
-            <a href="https://khangisme.github.io/aboutMe/">About me</a>
+            <a href="https://khangisme.github.io/game/">Game </a>
         </div>
         <div id="Left"><img src="background2.jpg" alt="ngon" height="400" width="342"></div>
         <div id="Cont">
